# screen_pointer

./: Cargo.toml  Makefile.toml
src/: client.rs  lib.rs  point3d.rs  screen.rs
tcp_draw/: Cargo.toml
tcp_draw/src/: main.rs
